modified onboarding flow
